implemented SW3: added proper roles, implemented Factory, Simulator, Reports